Fixed title of module.

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,9 @@
 <body>
     <h1>{{ title }}</h1>
     <h1>{{ url_path }}</h1>
-    <h1>{{ fields.get_field("test") }}</h1>
+    <section>
+        <p>{{ fields.get_field("hero") }}</p>
+    </section>
 </body>
 
 </html>
