Added CSS and updated HTML file.

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,15 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/main.css">
     <title>{{ title }}</title>
 </head>
 
 <body>
     <h1>{{ title }}</h1>
     <h1>{{ url_path }}</h1>
-    <section>
-        <p>{{ fields.get_field("hero") }}</p>
-    </section>
 </body>
 
 </html>
